[project]
name = "app"
version = "0.1.0"
description = "Sistema multi-agente para marketing de contenidos"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langchain (>=0.3.19,<0.4.0)",
    "langgraph (>=0.2.74,<0.3.0)",
    "langchain-openai (>=0.3.6,<0.4.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "requests (>=2.31.0,<3.0.0)",
    "fastapi (>=0.109.0,<0.110.0)",
    "uvicorn (>=0.27.0,<0.28.0)",
    "jinja2 (>=3.1.3,<3.2.0)"
]

[project.optional-dependencies]
test = [
    "pytest (>=7.4.0,<8.0.0)",
    "pytest-cov (>=4.1.0,<5.0.0)",
    "pytest-mock (>=3.11.1,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"
